# orage

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  org.xfce.orage.appdata.xml.in  org.xfce.orage.desktop.in
doc/: Makefile.am
docs/: orage-dbus-interface.md
globaltime/: Makefile.am  globaltime.c  globaltime.h  gt_parfile.c  gt_prefs.c  org.xfce.orage.globaltime.desktop.in  timezone_selection.c
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/160x160/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
libical/src/libical/: Makefile.am  icalarray.c  icalarray.h  icalattach.c  icalattachimpl.h  icalcomponent.c  icalduration.c  icalduration.h  icalenums.c  icalerror.c  icalerror.h  icallangbind.c  icallangbind.h  icalmemory.c  icalmemory.h  icalmime.c  icalmime.h  icalparameter.c  icalparameter.h  icalparameterimpl.h  icalparser.c  icalparser.h  icalperiod.c  icalperiod.h  icalproperty.c  icalproperty.h  icalrecur.c  icalrestriction.h  icaltime.c  icaltime.h  icaltimezone.c  icaltimezone.h  icaltypes.c  icalvalue.c  icalvalue.h  icalvalueimpl.h  sspm.c  sspm.h
libical/src/libicalss/: Makefile.am  icalcalendar.c  icalcalendar.h  icalclassify.c  icalclassify.h  icalcluster.c  icalcluster.h  icalclusterimpl.h  icaldirset.c  icaldirset.h  icaldirsetimpl.h  icalfileset.c  icalfileset.h  icalfilesetimpl.h  icalgauge.c  icalgauge.h  icalgaugeimpl.h  icalmessage.c  icalmessage.h  icalset.c  icalset.h  icalspanlist.c  icalspanlist.h  icalss.h  icalsslexer.c  icalssyacc.c
libical/zoneinfo/: Makefile.am
panel-plugin/: Makefile.am  oc_config.c  org.xfce.orage.clock-plugin.desktop.in  timezone_selection.c  xfce4-orageclock-plugin.c  xfce4-orageclock-plugin.h
plugin/: Makefile.am  meson.build  org.xfce.orage-settings.desktop.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  (+22 more)
sounds/: Makefile.am  meson.build
src/: Makefile.am  about-xfcalendar.c  about-xfcalendar.h  appointment.c  appointment.h  day-view.c  day-view.h  event-list.c  event-list.h  functions.c  functions.h  ical-archive.c  ical-code.c  ical-code.h  ical-expimp.c  ical-expimp.h  ical-internal.h  interface.c  interface.h  main.c  mainbox.c  mainbox.h  meson.build  orage-about.c  orage-about.h  orage-alarm-structure.c  orage-alarm-structure.h  orage-appindicator.c  orage-application.c  orage-application.h  orage-appointment-window.c  orage-appointment-window.h  orage-category.c  orage-category.h  orage-css.c  orage-css.h  orage-dbus-client.c  orage-dbus-client.h  orage-dbus-object.c  orage-dbus-object.h  (+57 more)
tests/: meson.build  test-orage-log.c  test-orage-time-utils.c
themes/: Makefile.am  meson.build
themes/Default/: gtk.css
tz_convert/: Makefile.am  tz_convert.c
