option(
  'libnotify',
  type: 'feature',
  value: 'auto',
  description: 'libnotify support',
)

option(
  'archive',
  type: 'boolean',
  value: true,
  description: 'Use automatic archiving',
)

option(
  'x11-tray-icon',
  type: 'boolean',
  value: false,
  description: 'Add X11 tray icon, not comptible with Wayland',
)

option(
  'default_logger',
  type: 'combo',
  choices: ['glib', 'orage'],
  value: 'glib',
  description: 'Default logging backend',
)
