orage_sources = [
  'event-list.c',
  'event-list.h',
  'functions.c',
  'functions.h',
  'ical-archive.c',
  'ical-code.c',
  'ical-code.h',
  'ical-expimp.c',
  'ical-expimp.h',
  'ical-internal.h',
  'interface.c',
  'interface.h',
  'main.c',
  'orage-about.c',
  'orage-about.h',
  'orage-alarm-structure.c',
  'orage-alarm-structure.h',
  'orage-application.c',
  'orage-application.h',
  'orage-appointment-window.c',
  'orage-appointment-window.h',
  'orage-category.c',
  'orage-category.h',
  'orage-css.c',
  'orage-css.h',
  'orage-i18n.h',
  'orage-import.h',
  'orage-import.c',
  'orage-rc-file.c',
  'orage-rc-file.h',
  'orage-sleep-monitor.c',
  'orage-sleep-monitor.h',
  'orage-sync-edit-dialog.c',
  'orage-sync-edit-dialog.h',
  'orage-sync-ext-command.c',
  'orage-sync-ext-command.h',
  'orage-task-runner.c',
  'orage-task-runner.h',
  'orage-week-window.c',
  'orage-week-window.h',
  'orage-window.c',
  'orage-window.h',
  'parameters.c',
  'parameters.h',
  'parameters_internal.h',
  'reminder.c',
  'reminder.h',
  'timezone_names.c',
  'timezone_names.h',
  'timezone_selection.c',
  'timezone_selection.h',
  'tz_zoneinfo_read.c',
  'tz_zoneinfo_read.h',
  'xfical_exception.c',
  'xfical_exception.h',
]

if get_option('x11-tray-icon')
  orage_sources += [
    'tray_icon.c',
    'tray_icon.h',
  ]
endif

executable(
  'orage',
  orage_sources,
  sources: xfce_revision_h,
  dependencies: [
    gio,
    glib,
    gtk,
    libical,
    libm,
    libnotify,
    libxfce4ui,
    libxfce4util,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('bindir'),
)
