# $Id$

iconsdir = $(datadir)/icons/hicolor/160x160/apps
icons_DATA =								\
	org.xfce.orage.xpm                               \
	org.xfce.orage_ice.xpm                           \
	org.xfce.orage_round.xpm                         \
	org.xfce.orage_sun.xpm

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent:
